# graphrag-multiview

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
archive/langgraph_implementation/: graph.py  nodes.py
config/: otel-collector.yaml  prometheus.yml
config/grafana/dashboards/: llm-usage.json  retrieval-pipeline.json  system-overview.json
config/grafana/provisioning/dashboards/: dashboards.yml
frontend/: index.html
graphrag/: __init__.py
graphrag/api/: __init__.py  chat.py  full_pipeline.py  main.py  visualization.py
graphrag/core/: __init__.py  config.py  models.py
graphrag/ingestion/: __init__.py  parser.py  resolver.py
graphrag/llm/: __init__.py  base.py  gemini.py  groq.py  ollama.py  openrouter.py
graphrag/observability/: __init__.py  logging.py  metrics.py  tracing.py
graphrag/retrieval/: __init__.py  embeddings.py  graph_expander.py  intent_classifier.py  pipeline.py  pipeline_langgraph.py  reranker.py
graphrag/storage/: __init__.py  neo4j.py  postgres.py  qdrant.py
sample_docs/: inspection_checklist.md  pump_maintenance_guide.md  rca_seal_failure.md  sds_corrosion_inhibitor.md  technical_bulletin_lubrication.md  valve_emergency_procedure.md
scripts/: create_multiview_schema.py  ingest_docs.py  test_full_pipeline.py
